# common-helm

./: .copier-answers.repo-component.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config-legacy.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  renovate.json5  ruff.toml  setup.py
.gitlab/: CODEOWNERS
docker/testrunner/: Dockerfile  Pipfile  sum.txt
docs/: charts.rst  common-helm-readme.md  conf.py  index.rst  spelling_wordlist
helm-test-harness/: pyproject.toml
helm-test-harness/docs/: glossary.md  quickstart.md  review-and-qa.md  testing-workloads.md  usage.md
helm-test-harness/scripts/: test-many-repos.sh
helm-test-harness/tests/client/: test_base_prefix_mapping.py  test_utils_apply_mapping.py
helm-test-harness/univention/testing/helm/: __init__.py  _warnings.py  base.py  client_udm.py  configmap.py  container.py  deployment.py  secret.py  serviceaccount.py  utils.py
helm-test-harness/univention/testing/helm/auth_flavors/: nats.py  password_usage.py  password_usage_base.py  password_usage_env.py  password_usage_projected_volume.py  password_usage_volume.py  secret_generation.py  secret_generation_base.py  secret_generation_owner.py  secret_generation_user.py  username.py
helm-test-harness/univention/testing/helm/best_practice/: __init__.py  annotations.py  base.py  extra_env_vars.py  image_configuration.py  labels.py
helm-test-harness/univention/testing/helm/client/: __init__.py  base.py  central_navigation.py  generic_client.py  ldap.py  memcached.py  nats.py  object_storage.py  password.py  postgresql.py  provisioning_api.py  smtp.py  udm.py  umc.py
helm/common/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
helm/common/templates/: _configmap.tpl  _deployment.tpl  _images.tpl  _ingress.tpl  _names.tpl  _secret.tpl  _service.tpl  _utils.yaml  _virtualservice.tpl
helm/nubus-common/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
helm/nubus-common/templates/: _annotations.tpl  _images.tpl  _names.tpl  _secrets.tpl
helm/test-client-config/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
helm/test-client-config/charts/: nubus-common
helm/test-client-config/templates/: configmap.yaml  deployment.yaml  secret-memcached.yaml  secret-smtp.yaml
helm/test-deployment/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/test-deployment/templates/: deployment.yaml
helm/test-helm-values/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
helm/test-helm-values/templates/: values.yaml
helm/test-nubus-common/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/test-nubus-common/templates/: secret-client.yaml  stub_template.yaml
pytest-helm/: pyproject.toml
pytest-helm/docs/: usage.md
pytest-helm/pytest_helm/: __init__.py  _warnings.py  _yaml.py  helm.py  models.py  plugin.py  utils.py
pytest-helm/tests/: test_get_resource.py  test_helm_template.py  test_models_helm_template_result.py  test_models_yaml_mapping.py  test_plugin.py  test_utils.py  test_yaml.py
pytest_helm/: helm.py  plugin.py  utils.py
tests/: Pipfile  README.md  conftest.py  test_configmap_ucr.py  test_defaults.py  test_extra_volumes.py  test_get_resource.py  test_helm_template.py  test_plugin.py  test_utils.py  utils.py
tests/best_practices/: test_image_configuration.py
tests/client-config/: conftest.py  test_memcached.py  test_smtp.py
tests/common/: conftest.py  test_configmap_ucr.py  test_defaults.py  test_extra_volumes.py
tests/common/best_practices/: test_image_configuration.py
tests/lib/: client_udm.py
tests/nubus-common/: conftest.py  test_client_secret.py
tests/nubus-common/annotations/: test_entries.py  test_render.py  utils.py
tests/nubus-common/best_practices/: test_labels.py
(+12 files in other folders)
