[project]
name = "pytest-helm"
version = "0.1.0"
description = "pytest fixtures helpers and a pre-configured test harness to unittest helm chart and enforce our team standards"
authors = [
  {name = "Univention GmbH", email = "packages@univention.de"},
  {name = "Nilscan", email = "nilscan31@gmail.com"}
]
maintainers = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pytest",
    "pytest-mock",
    "python-jsonpath",
]

[[tool.uv.index]]
name = "gitlab"
publish-url = "https://git.knut.univention.de/api/v4/projects/900/packages/pypi"
url = "https://git.knut.univention.de/api/v4/projects/900/packages/pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "pytest_helm",
]

[tool.ruff]
target-version = "py311"
line-length = 120

extend-select = ["I"]  # activate isort

