[project]
name = "helm-testing-metapackage"
version = "0.1.0"
package-mode = false
authors = [
    {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "AGPL-3.0-only"}

requires-python = "==3.11.*"

dependencies = [
    "pytest-helm",
    "helm-test-harness",
    "pdbpp>=0.10.3",
    "pytest-xdist>=3.8.0",
]

[tool.uv.sources]
pytest-helm = { path = "./pytest-helm/", editable = true }
helm-test-harness = { path = "./helm-test-harness/", editable = true }

# TODO: Adjust this
[tool.hatch.build.targets.wheel]
packages = ["tests/test_helpers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # activate isort

[tool.ruff.lint.isort]
known-first-party = ["univention"]
known-third-party = ["difflib"]
