[project]
name = "helm-test-harness"
version = "0.1.0"
description = "A pre-configured test harness to unittest helm charts and encourage following our team best-practices"
authors = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
maintainers = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "pytest-helm",
]

[tool.uv.sources]
junkaptor = { path = "junkaptor" }
pytest-helm = { path = "../pytest-helm" }

[[tool.uv.index]]
name = "gitlab"
publish-url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi"
url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "univention",
]
