[project]
name = "pytest-helm"
version = "0.9.1"
description = "pytest fixtures and helpers helpers to unittest helm charts"
authors = [
  {name = "Univention GmbH", email = "packages@univention.de"},
  {name = "Nilscan", email = "nilscan31@gmail.com"}
]
maintainers = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pytest",
    "pytest-mock",
    "python-jsonpath",
]

[project.entry-points.pytest11]
pytest-helm = "pytest_helm.plugin"

[[tool.uv.index]]
name = "gitlab"
publish-url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi"
url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdbpp>=0.11.6",
]

[tool.hatch.build]
include = [
    "pytest_helm",
]

[tool.ruff]
target-version = "py311"
line-length = 120

extend-select = ["I"]  # activate isort
